- Notifications behind other elements - fixed

--- a/web/public/stylesheets/less/nav.less
+++ b/web/public/stylesheets/less/nav.less
@@ -4,6 +4,7 @@ body {
 }
 
 .wizer-nav {
+  z-index: 99;
   //height: 50px;
   //background-color: #ff6654 !important;
 
